logic added to add, delete and list to-do-list

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li>"delete" - remove specific to-do</li>
         <li>"quit "- exit app</li>
     </ul>
-    <script src="app_to_do.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
